# geeMines

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENCE.md  README.md  TODO.md  config.jhb  geeMines.g3a
archives/: geeMines-0-1-1-debug.g3a  geeMines-0-1-2-debug.g3a  geeMines.0-1-2.g3a  geeMines.beta2.g3a  geeMines.beta3.g3a  geeMines.beta4.g3a
assets-cg/: fxconv-metadata.txt
linuxMines/: linuxMines.cbp  linuxMines.layout  main.c
sdlTests/: main.cpp  sdlTests.cbp  sdlTests.layout
src/: board.c  board.h  consts.h  game.c  game.h  geeMines.c  grid.c  grid.h  main.c  scores.c  scores.h  viewPort.c  viewPort.h
src/shared/: casioCalcs.c  casioCalcs.h  keys.c  keys.h  menu.c  menu.h  scrollBar.c  scrollBar.h  trace.h
utils/: genSmileys.py  rotateImage.py  rotateLEDS.py
